--- a/css/styles.css
+++ b/css/styles.css
@@ -639,7 +639,6 @@ label.form-label {
   display: flex;
   flex-direction: column;
   width: 448px;
-  height: 58px;
   margin-bottom: 10px;
 }
 .form-field label {
@@ -655,26 +654,28 @@ label.form-label {
   padding-left: 42px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
+  outline: none;
+  transition: boder-color 250ms var(--timing-function);
 }
 .input-position {
   position: relative;
 }
-.form-field .icon {
+.form-modal-input:hover,
+.form-modal-input:focus {
+  border-color: var(--accent-color);
+}
+.form-modal-input:hover + .form-icon,
+.form-modal-input:focus + .form-icon {
+  fill: var(--accent-color);
+}
+.form-icon {
   position: absolute;
   top: 11px;
   left: 12px;
   translate: -11px, -12px;
+  transition: fill 250 ms var(--timing-function);
 }
 .form-textarea {
-  /* resize: none;
-  font-size: 12px;
-  line-height: 14px;
-  letter-spacing: 0.01em;
-  width: 448px;
-  height: 120px;
-  padding: 12px 16px;
-  color: rgba(117, 117, 117, 0.5); */
-
   resize: none;
   margin: 0;
   padding: 12px 16px;
@@ -684,6 +685,10 @@ label.form-label {
   border-radius: 4px;
   outline: none;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.form-textarea:hover,
+.form-textarea:focus {
+  border-color: var(--accent-color);
 }
 /* Портфолио */
 
