--- a/css/styles.css
+++ b/css/styles.css
@@ -496,7 +496,7 @@ footer {
   margin-right: 93px;
 }
 .join,
-label.form-label {
+.form-sign-up label {
   color: var(--second-accent-color);
   text-transform: uppercase;
   line-height: 1.14;
@@ -607,6 +607,10 @@ label.form-label {
 }
 .close-btn {
   position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
   top: 8px;
   right: 8px;
   width: 30px;
@@ -616,10 +620,6 @@ label.form-label {
   fill: #000000;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  cursor: pointer;
 }
 .form-modal {
   width: 100%;
@@ -641,21 +641,22 @@ label.form-label {
   width: 448px;
   margin-bottom: 10px;
 }
-.form-field label {
+.form-modal label {
   margin-bottom: 4px;
-  font-size: 12px;
-  line-height: 1.67;
+  font-size: 14px;
+  line-height: 1.71;
   letter-spacing: 0.01em;
   color: var(--main-text-color);
+  transition: color 250 var(--timing-function);
 }
-.form-field input {
+.form-modal-input {
   width: 100%;
   height: 40px;
   padding-left: 42px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   outline: none;
-  transition: boder-color 250ms var(--timing-function);
+  transition: border-color 250ms var(--timing-function);
 }
 .input-position {
   position: relative;
@@ -678,6 +679,7 @@ label.form-label {
 .form-textarea {
   resize: none;
   margin: 0;
+  margin-bottom: 20px;
   padding: 12px 16px;
   width: 100%;
   height: 120px;
@@ -689,6 +691,40 @@ label.form-label {
 .form-textarea:hover,
 .form-textarea:focus {
   border-color: var(--accent-color);
+}
+.link-contract {
+  color: var(--accent-color);
+}
+.form-modal .label {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+.checkbox {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+.agree-icon {
+  display: inline-block;
+  width: 16px;
+  height: 15px;
+  margin-right: 7px;
+  background-color: transparent;
+  border: 2px solid rgba(33, 33, 33, 1);
+  border-radius: 4px;
+  transition: background-color 250ms var(--timing-function);
+}
+.checkbox:checked + .agree-icon {
+  border-color: transparent;
+  background-color: var(--accent-color);
+  background-size: cover;
+  background-origin: border-box;
+  background-repeat: no-repeat;
+}
+.form-modal .form-button {
+  margin: 0 auto;
 }
 /* Портфолио */
 
