--- a/css/styles.css
+++ b/css/styles.css
@@ -549,12 +549,10 @@ footer {
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
-  margin-right: 12px;
   outline: none;
 }
 .form-button {
-  width: 200px;
-  height: 50px;
+  padding: 10px 28px 10px 29px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -676,10 +674,65 @@ footer {
   translate: -11px, -12px;
   transition: fill 250 ms var(--timing-function);
 }
+.form-field.textarea {
+  margin-bottom: 20px;
+}
 .form-textarea {
   resize: none;
   margin: 0;
-  margin-bottom: 20px;
+  padding: 12px 16px;
+  width: 100%;
+  height: 120px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  outline: none;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.form-textarea:hover,
+.form-textarea:focus {
+  border-color: var(--accent-color);
+}
+.link-contract {
+  color: var(--accent-color);
+}
+.form-modal label {
+  margin-bottom: 4px;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.01em;
+  color: var(--main-text-color);
+  transition: color 250 var(--timing-function);
+}
+.form-modal-input {
+  width: 100%;
+  height: 40px;
+  padding-left: 42px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  outline: none;
+  transition: border-color 250ms var(--timing-function);
+}
+.input-position {
+  position: relative;
+}
+.form-modal-input:hover,
+.form-modal-input:focus {
+  border-color: var(--accent-color);
+}
+.form-modal-input:hover + .form-icon,
+.form-modal-input:focus + .form-icon {
+  fill: var(--accent-color);
+}
+.form-icon {
+  position: absolute;
+  top: 11px;
+  left: 12px;
+  translate: -11px, -12px;
+  transition: fill 250 ms var(--timing-function);
+}
+.form-textarea {
+  resize: none;
+  margin: 0;
   padding: 12px 16px;
   width: 100%;
   height: 120px;
@@ -707,21 +760,24 @@ footer {
   appearance: none;
 }
 .agree-icon {
-  display: inline-block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 16px;
   height: 15px;
   margin-right: 7px;
   background-color: transparent;
   border: 2px solid rgba(33, 33, 33, 1);
   border-radius: 4px;
+  fill: transparent;
   transition: background-color 250ms var(--timing-function);
 }
 .checkbox:checked + .agree-icon {
   border-color: transparent;
   background-color: var(--accent-color);
-  background-size: cover;
-  background-origin: border-box;
-  background-repeat: no-repeat;
+}
+.ckeckbox:focus + .agree-icon {
+  border-color: var(--accent-color);
 }
 .form-modal .form-button {
   margin: 0 auto;
